--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,9 +43,9 @@ add_library(myengine
   src/myengine/Core.cpp
   src/myengine/Entity.cpp
   src/myengine/MeshRenderer.cpp
-  src/myengine/ShaderProgram.cpp
-  src/myengine/VertexBuffer.cpp
-  src/myengine/VertexArray.cpp
+  src/myengine/Shader.cpp
+  src/myengine/VB.cpp
+  src/myengine/VA.cpp
   src/myengine/Sound.cpp
 )
 
